# libdrm

./: .gitignore  xf86drm.h  xf86drmMode.c  xf86drmMode.h
exynos/: exynos-symbol-check
tests/exynos/: Makefile.am  exynos_fimg2d_rop.c
tests/modetest/: Makefile.am  buffers.c  modetest.c
